--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<link rel="stylesheet" href="style.css">
 <html lang="ja">
 <head>
   <meta charset="utf-8" />
@@ -17,4 +18,5 @@ Bit英単語テスト  </h1>
   </nav>
   <main id="view"></main>
 </body>
+
 </html>
