--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!doctype html>
-<link rel="stylesheet" href="style.css">
 <html lang="ja">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Bit英単語テスト</title>
+  
+  <link rel="stylesheet" href="style.css"> 
+  
   <script src="app.js" defer></script>
 </head>
 <body>
   <h1>
-
-Bit英単語テスト  </h1>
+    Bit英単語テスト
+  </h1>
   <nav>
     <button id="modeLearn">学習</button>
     <button id="modeList">リスト</button>
@@ -18,5 +20,4 @@ Bit英単語テスト  </h1>
   </nav>
   <main id="view"></main>
 </body>
-
 </html>
