--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button id="modeLearn">学習</button>
     <button id="modeList">リスト</button>
     <button id="modeAdd">追加</button>
-  </nav>
+    <button id="modeType">タイピング</button>  </nav>
   <main id="view"></main>
 </body>
 </html>
