--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="app.js" defer></script>
 </head>
 <body>
+  <a id="backBtn" href="https://nagi613.github.io/EchoSense/echosense.html">←戻る</a>
   <h1>
     Bit英単語テスト
   </h1>
@@ -21,3 +22,4 @@
   <main id="view"></main>
 </body>
 </html>
+
